# PyProjects

./: .gitignore  FOLDER_STRUCTURE.md  README.md  lifecycle.md  main.py  pyproject.toml
FoodOrderDashboard/src/: notebook.ipynb
Linear_Regression/: feature_selection.ipynb
StreamlitDashboard/: .gitignore  README.md  pyproject.toml
StreamlitDashboard/docs/: Starting.md
StreamlitDashboard/src/: common.ipynb
StreamlitDashboard/src/core/: CustomerSurveyIntelligence.ipynb  Understand.ipynb
StreamlitDashboard/src/data/: dataset.csv
StreamlitDashboard/src/utils/: loader.py
TODO/: .gitignore  main.py  requirements.txt
TODO ( flask_App )/src/: index.html
core/AdaBoost/: AdaBoostRegresor.ipynb  Adaboost classifier.ipynb  adaboost.md
core/AnomalyDetection/: DBSCAN+Implementation+(1).ipynb  Isolation+Anamoly+Detection.ipynb  LOF.ipynb  ReadMe.md
core/DBSCAN-Clustering/: DBSCAN+Implementation.ipynb  DBSCAN_Clustering_Guide.md  dbscan_masterclass.py
core/DecisionTree/: DT.ipynb  Diabetes.ipynb  README.md
core/FoodOrderDashboard/: app.py
core/Hierarchial-Clustering/: Hierarchical_Clustering_Guide.md  Hierarichal+Clustering+Implementation.ipynb
core/K-Mean/: K+Means+Clustering+Algorithms+implementation.ipynb  Readme.md
core/KNN/: KNN.md  KNNClassifier.ipynb  KNNRegressor.ipynb
core/LifeCycleOfMLProject/: AlgerianForestFire.ipynb  SimpleLinearRegression.ipynb  multipleLinearRegression.ipynb
core/LinearRegression/: EDA.ipynb  HyperParamterTuning.md  feature_selection.ipynb  hyper_parameter_tunning.ipynb  (+4 more)
templates/: index.html  model_lab.html
(+26 files in other folders)
