[project]
name = "projects-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-multipart>=0.0.26",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
    "uvicorn>=0.46.0",
]
